Changed the code as perthe pdf and smart contract
